CSDT-26 Finish refactor

--- a/appserver/admingui/payara-console-extras/src/main/resources/fish/payara/admingui/extras/Strings.properties
+++ b/appserver/admingui/payara-console-extras/src/main/resources/fish/payara/admingui/extras/Strings.properties
@@ -157,17 +157,17 @@ requestTracing.configuration.sampleRateHelp=Defines the probability of any given
 requestTracing.configuration.applicationsOnlyEnabled=Applications Only
 requestTracing.configuration.applicationsOnlyEnabledHelp=When enabled, only requests for deployed applications will be traced.
 requestTracing.configuration.reservoirSamplingEnabled=Reservoir Sampling
-requestTracing.configuration.reservoirSamplingEnabledHelp=When disabled, the historical store will contain the longest request traces. When enabled, the chance of any sampled request being in the historical store becomes constant.
+requestTracing.configuration.reservoirSamplingEnabledHelp=When disabled, the trace store will contain the longest request traces. When enabled, the chance of any sampled request being in the trace store becomes constant.
 requestTracing.configuration.thresholdUnit=Threshold Unit
 requestTracing.configuration.thresholdUnitHelp=Defines a unit of time for the threshold value.
 requestTracing.configuration.thresholdValue=Threshold Value
 requestTracing.configuration.thresholdValueHelp=Defines amount of time. Requests that take less time than the threshold will be ignored. Note that this is applied after the sample chance, so may affect the perceived sample chance.
-requestTracing.configuration.historicalTraceEnabledLabel=Store Historic Traces?
-requestTracing.configuration.historicalTraceEnabledLabelHelpText=Enables or disables the storing of request traces in memory.
-requestTracing.configuration.historicalTraceStoreSizeLabel=Historic Trace Store Size
-requestTracing.configuration.historicalTraceStoreSizeLabelHelpText=The maximum number of traces to be stored in the historic trace store.
-requestTracing.configuration.historicalTraceStoreTimeoutLabel=Historical Trace Store Timeout
-requestTracing.configuration.historicalTraceStoreTimeoutLabelHelpText=The timeout value for historical traces to be removed (e.g. 2d 3h 5m 20s). Ignored when Reservoir Sampling is enabled.
+requestTracing.configuration.traceStoreEnabledLabel=Store Traces?
+requestTracing.configuration.traceStoreEnabledLabelHelpText=Enables or disables the storing of request traces in memory.
+requestTracing.configuration.traceStoreSizeLabel=Trace Store Size
+requestTracing.configuration.traceStoreSizeLabelHelpText=The maximum number of traces to be stored in the trace store.
+requestTracing.configuration.traceStoreTimeoutLabel=Trace Store Timeout
+requestTracing.configuration.traceStoreTimeoutLabelHelpText=The timeout value for traces to be removed (e.g. 2d 3h 5m 20s). Ignored when Reservoir Sampling is enabled.
 tree.requestTracing=Request Tracing
 
 requestTracing.configuration.notifier.dynamic=Notifier
@@ -183,7 +183,7 @@ requestTracing.link.to.notification.page.text.prefix=Selected Notifiers need to 
 requestTracing.link.to.notification.page.text=Notification Service
 requestTracing.link.to.notification.page.text.suffix=to receive notifications.
 
-requestTracing.historic.table.name=Historic Request Tracing
-requestTracing.historic.table.empty=No Historic Request Traces
-requestTracing.historic.table.headings.elapsedTime=Elapsed Time
-requestTracing.historic.table.headings.message=Message
+requestTracing.traceStore.table.name=Historic Request Tracing
+requestTracing.traceStore.table.empty=No Historic Request Traces
+requestTracing.traceStore.table.headings.elapsedTime=Elapsed Time
+requestTracing.traceStore.table.headings.message=Message
