--- a/nucleus/payara-modules/requesttracing-core/src/main/java/fish/payara/nucleus/requesttracing/admin/LocalStrings.properties
+++ b/nucleus/payara-modules/requesttracing-core/src/main/java/fish/payara/nucleus/requesttracing/admin/LocalStrings.properties
@@ -44,6 +44,6 @@ requesttracing.configure.thresholdvalue.success=Request Tracing Service Threshol
 requesttracing.configure.thresholdunit.success=Request Tracing Service Threshold Unit is set to {0}.
 requesttracing.notifier.configure.status.error=Notifier with name {0} could not be found.
 requesttracing.configure.notifier.added.configured=Request Tracing Notifier with name {0} is registered and set enabled to {1}.
-requesttracing.configure.historicaltrace.status.success=Request Tracing Historical Trace status is set to {0}.
-requesttracing.configure.historicaltrace.storesize.success=Request Tracing Historical Trace Store Size is set to {0}.
-requesttracing.configure.historicaltrace.timeout.success=Request Tracing Historical Trace Store Timeout is set to {0}.
+requesttracing.configure.store.status.success=Request Trace Store status is set to {0}.
+requesttracing.configure.store.size.success=Request Trace Store Size is set to {0}.
+requesttracing.configure.store.timeout.success=Request Trace Store Timeout is set to {0}.
