--- a/appserver/featuresets/payara-web/pom.xml
+++ b/appserver/featuresets/payara-web/pom.xml
@@ -219,6 +219,12 @@
             <version>${project.version}</version>
             <type>zip</type>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.main.packager</groupId>
+            <artifactId>cloud-trace</artifactId>
+            <version>${project.version}</version>
+            <type>zip</type>
+        </dependency>
         <!-- monitoring -->
         <dependency>
             <groupId>org.glassfish.main.packager</groupId>
