--- a/appserver/packager/pom.xml
+++ b/appserver/packager/pom.xml
@@ -180,6 +180,7 @@
         <module>environment-warning</module>
         <module>payara-rest-endpoints</module>
         <module>rest-monitoring</module>
+        <module>cloud-trace</module>
     </modules>
 
     <profiles>
