--- a/nucleus/distributions/payara-minimal/pom.xml
+++ b/nucleus/distributions/payara-minimal/pom.xml
@@ -187,6 +187,13 @@
         </dependency>
         <dependency>
             <groupId>fish.payara.packager</groupId>
+            <artifactId>cloud-trace-package</artifactId>
+            <version>${project.version}</version>
+            <type>zip</type>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>fish.payara.packager</groupId>
             <artifactId>requesttracing-package</artifactId>
             <version>${project.version}</version>
             <type>zip</type>
