--- a/nucleus/payara-modules/pom.xml
+++ b/nucleus/payara-modules/pom.xml
@@ -67,6 +67,7 @@ DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
         <module>notification-eventbus-core</module>
         <module>notification-cdi-eventbus-core</module>
         <module>jsr107-repackaged</module>
+        <module>cloud-trace</module>
     </modules>
     
     <profiles>
